# zk-X509

./: .env.example  .firebaserc  .gitignore  .gitmodules  BENCHMARKS.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY_TODO.md  docker-compose.yml  firebase.json  firestore.rules
.github/PULL_REQUEST_TEMPLATE/: add-project.md
.github/workflows/: desktop.yml  release.yml  verify-listings.yml
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/db/: registries.json
backend/docs/: firestore-cms.md
backend/scripts/: seed-firestore.ts
backend/src/: app.ts  firebase.ts  server.ts
certs/: ca.der  ca_pub.der  ec384_ca.der  ec384_ca_pub.der  ec384_signCert.der  ec_ca.der  ec_ca_pub.der  ec_signCert.der  generate-chain-certs.sh  generate-test-certs.sh  generate-test-crl.sh  signCert.der  test_crl.der  test_crl_revoked.der
certs/chain/: intermediate_ca.der  root_ca_pub.der  signCert.der
contracts/: .gitignore  foundry.toml
contracts/script/: Deploy.s.sol  DeployLocal.s.sol  SeedLocal.s.sol
contracts/src/: ISP1Verifier.sol  IdentityRegistry.sol  RegistryFactory.sol
contracts/test/: IdentityRegistry.t.sol  RegistryFactory.t.sol
data/: CA-CERTS-README.md
data/ca-certs/: yessignCA-Test Class 5.der
data/ca-certs-ae/: SOURCES.txt
data/ca-certs-br/: AC-Certisign-G8.der  AC-SERPRO-v4.der  ICP-Brasilv12.der  ICP-Brasilv13.der  ICP-Brasilv6.der  ICP-Brasilv7.der  SOURCES.txt
data/ca-certs-ch/: EnhancedCA01.der  RegularCA02.der  RootCAIV.der  RootCAVI.der  SOURCES.txt  SwissGovernment-E-Root02.der
data/ca-certs-de/: BNotK-EC-Root-CA-2020.der  BNotK-Root-CA-2021.der  D-TRUST_Basic_Root_CA_1_EC_2024.der  D-TRUST_Basic_Root_CA_2_RSA_2024.der  D-TRUST_Root_CA_1_2021.der  D-TRUST_Root_CA_5_2022.der  D-TRUST_Root_CA_6_2023.der  SOURCES.txt
data/ca-certs-ee/: ORG_2021E.der  ORG_2021R.der  SK_ID_Solutions_ROOT_G1E.der  SK_ID_Solutions_ROOT_G1R.der  SOURCES.txt
data/ca-certs-in/: SOURCES.txt
data/ca-certs-jp/: GPKI-Bridge-CA.der  GPKI-OSCA-Root.der  JGCA-OS-SubCA.der  JGCA-Org-SubCA.der  JGCA-Root.der  SOURCES.txt
data/ca-certs-kr/: SOURCES.txt
data/ca-certs-sg/: SOURCES.txt
data/ca-certs-tw/: HCA2.der  SOURCES.txt  XCA2.der  XCA3.der
data/ca-certs-us/: DoD-Interop-Root-CA-2.der  DoD-Root-CA-3.der  ECA-Root-CA-4.der  ECA-Root-CA-5.der  IdenTrust-Global-Root-CA-1.der  SOURCES.txt  US-State-Dept-Root-CA.der
deployments/: 11155111.json
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/commands/: certificates.rs  mod.rs  onchain.rs  proving.rs  settings.rs
docs/: architecture.md  benchmark-methodology.md  client-side-proving.md  crl-merkle-oracle-design.md  delegated-prover-design.md  deployment-guide.md  design-ca-auto-matching.md  design-ca-registry-ci.md  design-ca-remote-repository.md  design-platform-architecture.md  design-ton-fee.md  docker-local-setup.md  latexmkrc  local-setup.md  medium-article.md  paper-academic.md  paper-academic.tex  paper.md  presentation.md  references.bib  testing-guide.md  whitepaper.md
docs/development/: TODO-remove-file-npki.md  architecture.md  crl-merkle-oracle-design.md  delegated-proving-flow.mmd  deployment-guide.md  design-ca-guide-auto-generate.md  design-ca-registry-ci.md  design-ca-remote-repository.md  design-delegated-proving.md  design-platform-backend.md  e2e-test-guide.md  local-setup.md  prover-server-guide.md  use-cases.md
docs/paper/: benchmark-methodology.md  medium-article.md  paper-academic.md  paper-academic.tex  paper.md  presentation.md
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend-v2/: package-lock.json
frontend-v2/app/: layout.tsx  page.tsx
frontend-v2/components/: Navbar.tsx  Sidebar.tsx
frontend-v2/lib/: contract.ts  wallet.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdminContent.tsx  AssistantWidget.tsx  CaRegistrationModal.tsx  ConnectWalletScreen.tsx  CopyButton.tsx  DashboardContent.tsx  Footer.tsx  MembersContent.tsx  Navbar.tsx  Sidebar.tsx
frontend/lib/: contract.ts  dev-config.ts  utils.ts  (+6 more)
lib/: Cargo.toml
program/: Cargo.toml
program/src/: main.rs
public/: index.html
script/: Cargo.toml  Dockerfile  bench-comparison.sh  bench.sh  build-app.sh  build.rs  deploy-on-existing-anvil.sh  enable-delegated-proving.sh  run-interactive.sh  run-local.sh  start-services.sh  stop-services.sh  verify-deployment.sh
script/app-resources/: AppIcon.icns  Info.plist  entitlements.plist  launcher.sh
script/src/: ca.rs  ca_repo.rs  keychain.rs  lib.rs  merkle.rs  npki.rs  onchain.rs  ownership.rs  smt.rs  stdin.rs
scripts/: deploy-local.sh  frontend-entrypoint.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
(+80 files in other folders)
