[package]
name = "zk-x509-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zk-x509-script = { path = "../../script" }
zk-x509-lib = { path = "../../lib" }
sp1-sdk = { version = "6.0.1", features = ["blocking"] }
alloy-sol-types = { workspace = true }
hex = "0.4"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
ureq = { version = "3.3.0", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
sp1-build = { version = "6.0.1" }
